se actualiza el barra de navegacion

--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,61 @@
-.basenavar {
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Dela+Gothic+One&family=Delius&family=Passion+One:wght@400;700;900&family=Righteous&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    box-sizing: border-box;
+    font-family: 'Work Sans';
+    margin: 0;
+    padding: 0;
+}
+html{
+    /* para deslizar el menu*/
+    scroll-behavior: smooth;
+}
+.contend-header{
     background-color: aqua;
+    position: relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99;
 }
-.banner{
-    background-color: black;
-    height: 25em;
+.contend-header header{
+    max-width: 1100px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 20px;
 }
-.fotopricipal{
-    height: 5em;
-    width: 5em;
+.contend-header header .logo a{
+    font-family: 'Righteous';
+    font-size: 42px;
+    color: black;
+    text-decoration: none;
+}
+.contend-header header ul{
+    display: flex;
+    list-style: none;
+
+}
+.contend-header header nav ul li a{
+    text-align: none;
+    color: black;
+    margin: 0 15px;
+    padding: 3px;
+    transition: .5s;
+    text-decoration: none;
+
+
+}
+.contend-header header nav ul li a:hover{
+    color: red;
+    border-color: white;
+}
+.nav-responsive{
+    background-color: rgb(21, 161, 115);
+    color: black;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none;
+    
 }
