--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,7 @@ html{
     scroll-behavior: smooth;
 }
 .contend-header{
-    background-color: aqua;
+    background-color: rgb(24, 24, 24);
     position: relative;
     width: 100%;
     top: 0;
@@ -28,8 +28,13 @@ html{
 .contend-header header .logo a{
     font-family: 'Righteous';
     font-size: 42px;
-    color: black;
+    color: white;
+    border-color: blue;
     text-decoration: none;
+}
+.contend-header header .logo a:hover{
+    color: blue;
+    border: white;
 }
 .contend-header header ul{
     display: flex;
@@ -38,24 +43,91 @@ html{
 }
 .contend-header header nav ul li a{
     text-align: none;
-    color: black;
+    color: white;
+    border-color: blue;
     margin: 0 15px;
     padding: 3px;
     transition: .5s;
     text-decoration: none;
-
-
+    font-size: 16px;
 }
 .contend-header header nav ul li a:hover{
-    color: red;
+    color: blue;
     border-color: white;
 }
 .nav-responsive{
-    background-color: rgb(21, 161, 115);
+    background-color: white;
     color: black;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
-    display: none;
+    display: none;     
+}
+.nav-responsive:hover{
+    color: blue;
+    border-color: red;
+}
+/*
+seccion donde se encuentra la foto y la redes sociales
+*/
+.inicio{
+    background:
+        linear-gradient(
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.10)
+        ), 
+        url(https://imagizer.imageshack.com/img924/7875/J6SlCy.jpg) no-repeat center center;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    color: white;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.inicio .contend-baner{
+    padding: 20px;
+    background-color: black;
+    max-width: 350px;
+    margin: auto;
+    text-align: center;
     
+}
+.inicio .contenido-baner img{
+    margin-top: 40px;   
+    display: block;
+    width: 60%;
+    margin: auto;   
+}
+.inicio .contenido-baner h1{
+    margin-top: 40px;
+    font-size: 45px;
+    font-family:Playwrite CU, cursive;
+    border-color: blue;
+}
+.inicio .contenido-baner h2{
+    font-size: 22px;
+    font-weight: normal;
+    font-family: Playwrite CU, cursive;
+    border-color: blue;
+}
+.inicio .contenido-baner .redes a i{
+    font-size: 35px;
+}
+.inicio .contenido-baner .redes a{
+    display: inline-block;
+    text-decoration: none;
+    border: 2px solid blue ;
+    border-radius: 100%;
+    width: 52px;
+    height: 52px;
+    line-height: 52px;
+    margin: 40px 5px;
+    font-size: 25px;
+    transition: .5s;
+}
+.inicio .contenido-baner .redes a:hover{
+    background-color: blue;
+    border-color:white;
 }
