--- a/stilos/ciertificaciones.css
+++ b/stilos/ciertificaciones.css
@@ -119,16 +119,24 @@ main{
 h1 {
     font-size: 28px;
     margin-bottom: 20px;
+    
+}
+.titulo_ciertificado{
+    color: white;
 }
 
-p {
+p  {
     font-size: 18px;
     line-height: 1.5;
+    color: white;
 }
-
+li{
+    color: white;
+}
 img {
     max-width: 100%;
     height: auto;
+    align-items: center;
 }
 
 .btn-success {
@@ -144,7 +152,9 @@ img {
 }
 
 
-
+.opcion-content{
+    align-items: center !important;
+}
 
 
 /* footer*/
